Log read-after-optime timeouts

XMLWordPrintableJSON

    • Fully Compatible
    • Repl 10 (02/19/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      To debug issues with CSRS and read-after-optime it would be nice to have a way to see in the logs when an operation is timing out on waiting for a given optime to become visible.

      Sample log message that will be logged:

      2016-02-11T14:20:29.647-0500 c20010| 2016-02-11T14:20:29.646-0500 I COMMAND  [conn1] Command on database 
      local timed out waiting for read concern to be satisfied. Command: { find: "oplog.rs", readConcern: { afterOpTime: { ts: Timestamp 14
      55218425000|0, t: -1.0 } }, maxTimeMS: 5000.0 }
      

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Spencer Brody (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: