SERVER-22428 added logging for read-after-optime timeouts