jstests/sharding/replset_config/lagged_config_secondary.js
@@ -30,6 +30,23 @@ var exception = assert.throws(function() {
 
 assert.eq(ErrorCodes.ExceededTimeLimit, exception.code);
 
+var msg = 'Command on database config timed out waiting for read concern to be satisfied.';
+assert.soon(
+    function() {
+        var logMessages =
+            assert.commandWorked(delayedConfigSecondary.adminCommand({getLog: 'global'})).log;
+        for (var i = 0; i < logMessages.length; i++) {
+            if (logMessages[i].indexOf(msg) != -1) {
+                return true;
+            }
+        }
+        return false;
+    },
+    'Did not see any log entries containing the following message: ' + msg,
+    60000,
+    300
+);
+
 st.stop();
 
 }());
