src/mongo/shell/replsettest.js
@@ -588,6 +588,7 @@ var ReplSetTest = function(opts) {
     /**
      * Waits for the last oplog entry on the primary to be visible in the committed snapshop view
      * of the oplog on *all* secondaries.
+     * Returns last oplog entry.
      */
     this.awaitLastOpCommitted = function() {
         var rst = this;
@@ -614,6 +615,8 @@ var ReplSetTest = function(opts) {
 
             return true;
         }, "Op with OpTime " + tojson(masterOpTime) + " failed to be committed on all secondaries");
+
+        return masterOpTime;
     };
 
     this.awaitReplication = function(timeout) {
